Fix nullptr crash associated with invalid access on `addResourceOrWarnIfNotLoaded`

Since this method is supposed to warn the user, we shouldn't be risking a segfault
on invalid function calls to null pointers!

BUG:445581
(cherry picked from commit 103fb3f29ae2600d6bc1192833278ea56dc80c28)